# telegramautomation

./: .env.example  .gitignore  1_Avtorizatsiya.spec  2_TelegramAgent.spec  README.md  pyproject.toml  requirements.txt
scripts/: format_sheet_grid.py  integration_smoke_test.py  populate_sample_sheet_data.py
src/telegramautomation/: __init__.py  __main__.py  auth.py  bootstrap.py  config.py  control_bot.py  dispatcher.py  models.py  scheduler_service.py  sheet_grid.py  sheets_client.py  storage.py  telegram_client.py
src/telegramautomation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_config.py  test_control_config.py  test_sheet_id_parser.py
